--- a/Projekt1/css/style.css
+++ b/Projekt1/css/style.css
@@ -44,9 +44,112 @@ body {
 
 .header-bg {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  padding-right: 30px;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.clock {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  background-image: url("../img/clock.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+  border-radius: 50%;
+  border: 2px solid black;
+}
+.clock .number {
+  position: absolute;
+  --rotation: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transform: rotate(var(--rotation));
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+}
+.clock .number1 {
+  --rotation: 30deg;
+}
+.clock .number2 {
+  --rotation: 60deg;
+}
+.clock .number3 {
+  --rotation: 90deg;
+}
+.clock .number4 {
+  --rotation: 120deg;
+}
+.clock .number5 {
+  --rotation: 150deg;
+}
+.clock .number6 {
+  --rotation: 180deg;
+}
+.clock .number7 {
+  --rotation: 210deg;
+}
+.clock .number8 {
+  --rotation: 240deg;
+}
+.clock .number9 {
+  --rotation: 270deg;
+}
+.clock .number10 {
+  --rotation: 300deg;
+}
+.clock .number11 {
+  --rotation: 330deg;
+}
+.clock .number12 {
+  --rotation: 360deg;
+}
+.clock .hand {
+  --rotation: 30;
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform-origin: bottom;
+  transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+  background-color: black;
+  border: 1px solid white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  z-index: 10;
+}
+.clock .second {
+  width: 3px;
+  height: 45%;
+  background-color: red;
+}
+.clock .minute {
+  width: 7px;
+  height: 40%;
+  background-color: black;
+}
+.clock .hour {
+  width: 10px;
+  height: 30%;
+  background-color: black;
+}
+
+.clock::after {
+  content: "";
+  position: absolute;
+  background-color: black;
+  z-index: 11;
+  width: 15px;
+  height: 15px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
 }
 
 nav {
